# rubrica

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/application/: contact_controller.py  view_controller.py
src/models/: contact.py
src/storage/: contact_storage.py  file_storage.py  sql_database.py
src/test/: test_contact_controller.py  test_file_storage.py  test_sql_database.py
src/views/: add_edit_view.py  main_view.py
